<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_hospital"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_hospital" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mine" />

</menu>
